30% completed. Add more to js file.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/0f97643179.js"></script>
         <link rel="stylesheet" href="assets/css/styles.css">
 
     </head>
@@ -34,11 +35,13 @@
                     <!-- ************************* START ************************************************************* -->
                     <!-- ********************************************************************************************* -->
 
-                            <div id="preGameText" class="preGameText text-center pb-5"> Press any key to get started!</div>
+                            <div id="preGameText" class="preGameText text-center pb-5"><span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                                Press any key to get started! <span><i class="fa fa-arrow-left" aria-hidden="true"></i></span></div>
 
-                            <div id="wordWithSpaces" class="gameText text-left"> Put word with spaces (___, ____, ___):</div>
-                            <div id="numberOfGuess" class="gameText text-left "> Number of Guesses: </div>
-                            <div id = "lettersAlreadyGuessed" class="gameText text-left"> Letters already guessed: </div>
+                            <div id="numberOfWins" class="gameText text-left"> Number of wins: 0 </div>
+                            <div id="wordWithSpaces" class="gameText text-left"> Current word: </div>
+                            <div id="numberOfGuesses" class="gameText text-left "> Guesses Remaining: </div>
+                            <div id = "lettersAlreadyGuessed" class="gameText text-left"> Letter already guessed:</div>
                     </div>
 
                     <div class = "col-3"></div>
@@ -48,9 +51,9 @@
                 <!-- ********************************************************************************************** -->
                 <!-- ************************* END **************************************************************** -->
 
-            </div>
-
         </div>
+
+
 
         <!--BOOTSTRAP and JS STUFF -->
 
